refactor: configuring cross origin and customizing validation error message

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,8 +3,8 @@ NotNull={0} is required
 
 
 # Client
-NotBlank.name={0} is required
-NotNull.cpf=CPF is required
-CPF.client.cpf=CPF is invalid
-client.name=Client name 
-client.cpf={0} Client CPF is required
+NotNull.clientRequestDTO.cpf=Client CPF is required
+CPF.clientRequestDTO.cpf=Client CPF is invalid
+NotBlank.clientRequestDTO.name=Client name is required
+
+
