feat: Implementing validation and customizing error response

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,4 +7,10 @@ NotNull.clientRequestDTO.cpf=Client CPF is required
 CPF.clientRequestDTO.cpf=Client CPF is invalid
 NotBlank.clientRequestDTO.name=Client name is required
 
+#ServiceProvided
+NotBlank.serviceProvidedRequestDTO.description=Description is required.
+PositiveOrZero.serviceProvidedRequestDTO.price=Price must be greater than or equal to 0.
+NotNull.serviceProvidedRequestDTO.price=Price is required.
+NotNull.serviceProvidedRequestDTO.clientId=ClientId is required.
+
 
