refactor: refactoring the webConfig class referring to CORS

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,6 +11,6 @@ NotBlank.clientRequestDTO.name=Client name is required
 NotBlank.serviceProvidedRequestDTO.description=Description is required.
 PositiveOrZero.serviceProvidedRequestDTO.price=Price must be greater than or equal to 0.
 NotNull.serviceProvidedRequestDTO.price=Price is required.
-NotNull.serviceProvidedRequestDTO.clientId=ClientId is required.
+NotNull.serviceProvidedRequestDTO.clientId=Client is required.
 
 
