feat: creating User migration, refactoring the DTOs and validation messages.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,8 +4,19 @@ NotNull={0} is required
 
 # Client
 NotNull.clientRequestDTO.cpf=Client CPF is required
-CPF.clientRequestDTO.cpf=Client CPF is invalid
+CPF.clientRequestDTO.cpf=Client CPF is invalid. Enter only numbers without a hyphen or period
 NotBlank.clientRequestDTO.name=Client name is required
+NotBlank.clientRequestUpdateDTO.name=Client name is required
+NotBlank.clientRequestUpdateDTO.email=Email is required
+Email.clientRequestUpdateDTO.email=Enter a valid email: email@teste.com
+
+
+# User
+NotBlank.username=Username is required
+Email.email=Enter a valid email: email@teste.com
+NotBlank.email=Email is required
+NotBlank.userRequestDTO.cpf=CPF is required
+CPF.cpf=User CPF is invalid. Enter only numbers without a hyphen or period
 
 
 #ServiceProvided
